# HTTP-Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: common.h  request_handler.h  server.h
src/: main.c  request_handler.c  server.c
www/: index.html
